# Something3D

./: .gitignore  CMakeLists.txt  README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
resources/shaders/: shader.frag  transform.vert
shaders/: shader.frag  shader.vert  shaderRect.frag
src/: Camera.cpp  Camera.h  Game.cpp  Logger.cpp  Logger.h  Main.cpp  Shader.cpp  Shader.h
